# Pipka

./: .env.example  .gitignore  CLAUDE.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  fill_profile.py  pyproject.toml  pytest.ini  run.py  sync.py
.claude/: launch.json
.claude/hooks/: session-start.sh
.github/workflows/: ci.yml
.obsidian/: workspace.json
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_phase2_profile_hash.py  0003_job_url_status.py  0004_search_embeddings.py  0005_cascade_fks.py
app/: config.py  database.py  main.py
app/api/: _helpers.py  _ratelimit.py  admin.py  auth.py  dashboard.py  health.py  jobs.py  ops.py  pages.py  profile.py  scan.py  stats.py
app/bot/: bot.py  formatters.py  keyboards.py
app/models/: __init__.py  application.py  job.py  ops_event.py  user.py
app/scoring/: gemini_matcher.py  matcher.py  nvidia_matcher.py  profile_hash.py  rules.py
app/services/: backup_service.py  embedding_service.py  job_service.py  ops_service.py  scheduler_service.py  tracker_service.py  url_checker.py  user_service.py
app/sources/: __init__.py  adzuna.py  aggregator.py  arbeitnow.py  arbeitsagentur.py  base.py  berlinstartupjobs.py  jobspy_source.py  jooble.py  remotive.py  watchlist.py  wttj.py  xing.py
app/static/: dashboard.html  infographic.html  llms.txt
docs/pipka-wiki/: API.md  Auth.md  Changelog 2026-04.md  Changelog 2026-05.md  Changelog 2026-06.md  Changelog 2026-07.md  Frontend.md  Observability.md  Ops панель.md  Rate limiting.md  (+22 more)
scripts/: 2026_04_add_hot_path_indexes.sql
tests/: test_rules.py
(+27 files in other folders)
